        Class LPData:
            - Routine reserve() now takes the tableaux by reference.
            - Routine extractSolution() now returns its vector by value,
              instead of using a reference argument.
        Class LPInitialTableaux:
            - The constraintsBroken() routines are gone; instead the class
              constructor throws an exception on error.
        Class LPSystem:
            - New class to translate coordinate systems into a layout
              for LPInitialTableaux.
        Class Manifold:
            - Routines construct() and homology() now return by value, not by
              pointer, and throw exceptions on error instead of returning null.
            - Renamed TeXName() to texName().  The old name is kept but
              deprecated.
        Class MarkedAbelianGroup:
            - New move constructor.
            - New copy assignment and move assignment operators.
            - Added member and global swap() functions.
            - All functions that used to return a std::unique_ptr<X> now
              just return an X by value (which can then be moved from).
            - Constructors that used to take (const MatrixInt&) arguments
              now take a MatrixInt by value.
        Class MarkedVector:
            - New convenience routine clear_destructive().
            - New typedefs value_type, reference and const_reference.
            - New global swap() to complement the existing member swap().
            - Granted access to the reserve() member function.
        Class Matrix:
            - New routine transpose().
            - New routines rowEchelonForm() and columnEchelonForm() for
              matrices over Regina's integer types (including MatrixInt).
            - New operator * for multiplying a matrix by a vector.
            - New routines combRows() and combCols().
            - New constructor that takes the side length of a square matrix.