@@ -37,3 +37,9 @@ Not feasible
 [[-1, -1, -1, 0, 1, 1, -1, -1, 0, 0, 1, 0, -1, -1, 0, 0, 1, 1, 0, 1, 0, 0, 0, -1, 1, 1, 0, 0, -1]]
 [[-1, -1, -1, 0, 1, 1, -1, -1, 0, 0, 1, 0, -1, -1, 0, 0, 1, 1, 0, 1, 0, 0, 0, -1, 1, 1, 0, 0, -1]]
 
+System: True False True False
+Columns: 21 -> 21
+Perm: [4, 5, 6, 18, 19, 20, 11, 12, 13, 0, 1, 2, 3, 14, 15, 16, 17, 7, 8, 9, 10]
+( 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 1 0 1 0 0 0 )
+( 0 0 0 0 1 0 1 1 1 1 0 0 0 0 0 1 0 0 0 1 0 )
+Not feasible
